--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -90,7 +90,7 @@ jobs:
   # For CI runs on master, automatically publish packages
   - bash: |
         cd _build
-        echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
+        echo //registry.npmjs.org/:_authToken=\${NPM_TOKEN} > .npmrc
         npm publish || true # Ignore publish failures, usually will happen because package already exists
     displayName: (azure-pipelines-task-lib) npm publish
     workingDirectory: node
@@ -100,7 +100,7 @@ jobs:
 
   - task: PublishPipelineArtifact@1
     inputs:
-      targetPath: './node/.npmrc'
+      targetPath: './node/_build/.npmrc'
       artifact: 'npmrc'
       publishLocation: 'pipeline'
 #################################################
