--- a/node/package.json
+++ b/node/package.json
@@ -4,6 +4,9 @@
   "description": "Azure Pipelines Task SDK",
   "main": "./task.js",
   "typings": "./task.d.ts",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "scripts": {
     "build": "node make.js build",
     "test": "node make.js test"
